clusters/main/tenants/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${tenant_name}
  labels:
    tenant: ${tenant_name}
